# corolla

./: .gitignore  Cargo.toml  Gemfile  README.md  Rakefile  TODO-next.md  a.sqlite3  corolla  corolla-api-test.sqlite3  corolla-api-test.sqlite3-shm  corolla-api-test.sqlite3-wal  corolla-server-test.sqlite3-shm  corolla-server-test.sqlite3-wal  cpanfile  cpanfile.snapshot  example_spec.json  example_spec_with_conversions.json  spec_schema.json
.github/workflows/: rust.yml
dev/: README.md  cleanup  readme.pl
dev/Tasks/: Fmt.pm  Readme.pm
examples/: example.ts  example_spec.json  example_spec_with_conversions.json
js_api/: README.md  api_test.ts  bun.lockb  index.test.ts  index.ts  package.json
lib/: Consts.pm  DB.pm  Server.pm
schemas/: spec_schema.v1.0.0.json
src/: db.rs  endpoints.rs  error.rs  main.rs
src/corolla/: consts.rs  db.rs  error.rs  mod.rs  spec.rs  version.rs
src/corolla/db/: db_info  db_info.rs  mod.rs
src/db/: mod.rs
tests/: api_test.rs  integration_test.rs
tests/common/: mod.rs
tests/mod/: common.rs
