[package]
name = "corolla"
version = "0.3.0"
edition = "2021"
description = "\"your liteweight backend\""
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "4.5.3", features = ["derive"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "macros"]}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
