[package]
name = "corolla"
version = "0.3.2"
edition = "2021"
description = "\"your liteweight backend\""
license = "BSD-3-Clause"
repository = "https://github.com/janie314/corolla"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "macros"]}
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "process"] }
tower-http = { version = "0.5.2", features = ["fs"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
reqwest = { version = "0.12.5", features = ["json"] }
